MainMethodTestCases/src/com/example/valid/Main12.java
package com.example.valid;

public class Main12 {

	/**
	 * Valid.
	 * 
	 * This is the most common form of the main method except that static and
	 * public keywords are reversed. Their order does not matter.
	 * 
	 * Source: https://rationalpi.wordpress.com/2007/01/29/main-methods-in-java/
	 */
	static public void main(String[] args) {
		System.out.println("Main12!");
	}

}
