MainMethodTestCases/src/com/example/invalid/Main14.java
package com.example.invalid;

public class Main14 {

	/**
	 * Invalid. Does not compile.
	 * 
	 * The return type (void in this case) must come immediately before the
	 * method name.
	 * 
	 * Source: https://rationalpi.wordpress.com/2007/01/29/main-methods-in-java/
	 */
//	 void public static main(String[] args) {
//		 System.out.println("Main14!");
//	 }

}
